# nexusapi-evaluator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  dev.config.example.json  index.html  package.json  pnpm-lock.yaml  server.mjs  vite.config.js
design-preview/: home.html  modern.html
docs/: ACCEPTANCE_TEST_PLAN.md  DEVELOPMENT.md  DEVELOPMENT.zh-CN.md  MAINTAINING.md  PACKAGING.md  PACKAGING.zh-CN.md  PRE_RELEASE_CHECKLIST.md  USER_MANUAL.md
scripts/: dev-desktop.mjs  port-policy.mjs
server/: ai-report-analysis.mjs  benchmark-scorers.mjs  client-log-analyzer.mjs  client-log-importer.mjs  client-replay.mjs  constants.mjs  costing.mjs  data-store.mjs  db.mjs  diagnostics.mjs  error-log.mjs  http-request.mjs  http-security.mjs  judge-orchestration.mjs  live-adapters.mjs  llm-judge.mjs  model-fingerprint.mjs  paths.mjs  profile-store.mjs  protocols.mjs  report-html.mjs  reporting.mjs  rut-auditor.mjs  rut-orchestration.mjs  scenario-evaluator.mjs  secret-store.mjs  static-paths.mjs  stats.mjs  summaries.mjs  support-bundle.mjs  task-manager.mjs  test-runner.mjs  token-auditor.mjs  tokenizer-fingerprint.mjs  utils.mjs  workspace-store.mjs
src/: admission-view.js  api-client.js  app.js  client-error-reporter.js  client-utils.js  clipboard.js  confirm-dialog.js  cost-estimates.js  delivery-panel.js  delivery-view.js  demo-data.js  dom-utils.js  formatters.js  history-view.js  key-modal.js  operator-guidance.js  page-help.js  profile-view.js  (+13 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+52 files in other folders)
