[package]
name = "nexusapi-evaluator"
version = "0.1.0"
description = "NexusAPI model and channel evaluator"
authors = ["yl0711"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
